# CPPSteganography

./: .gitmodules  CMakeLists.txt  CmakeLists.txt  environment.yml
headers/: CustomHead.h  algo.h
include/: EchoDecoder.h  EchoEncoder.h  decoder.h  encoder.h
src/: Algo.cpp  CustomHead.cpp  EchoDecoder.cpp  EchoEncoder.cpp  decoder.cpp  encode_decode.cpp  encoder.cpp  main.cpp
test/: CMakeLists.txt
